Tab key functionality in editor. Word wrap in editor and preview, Fixed wrong initial values after switching preview -> editor

--- a/src/theme/css/github-markdown.css
+++ b/src/theme/css/github-markdown.css
@@ -61,6 +61,8 @@
   line-height: 1.5;
   word-wrap: break-word;
   padding: 50px 60px;
+  word-wrap: break-word;
+  word-break: break-all;
   flex: 1;
 }
 
